# DeviceAccess

./: CMakeLists.txt
backends/DirectMapping/include/: DirectMappingBackend.h
backends/DirectMapping/src/: DirectMappingBackend.cc
backends/LogicalNameMapping/src/: LogicalNameMapParser.cc
backends/rpmsg/include/: RpmsgBackend.h
backends/rpmsg/src/: RpmsgBackend.cc
backends/udmabuf/include/: UDmaBufBackend.h
backends/udmabuf/src/: UDmaBufBackend.cc
backends/uio/include/: UioAccess.h
backends/uio/src/: UioAccess.cc  UioBackend.cc
cmake/: LogicalNameMappingSchemaPaths.h.in
src/: BackendFactory.cc  TypeChangingDecorator.cc
tools/LNMEditor/: pyproject.toml
tools/LNMEditor/lnm_editor/: __init__.py  __main__.py  app.py  constants.py  model.py  widgets.py  xmlio.py
tools/LNMEditor/lnm_editor/xmlschema/: __init__.py  logicalNameMap.xsd
tools/LNMEditor/tests/: conftest.py  test_model_xmlio.py
